// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<XSkillsTestAssignment /> isTabIsolated 1`] = `
<React.Fragment>
  <div
    className="xskills-test-assign"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="xskills-test-assign__tab-content xskills-test-assign__tab-content--overlay"
      >
        <div
          className="xskills-test-assign__select-block"
        >
          <span
            className="xskills-test-assign__select-block-caption"
          >
            Select Expert 21 Workshop Test
          </span>
          <div
            className="xskills-test-assign__test-input-left"
          >
            <React.Fragment
              key="xskillsTestRadio_1"
            >
              <div
                className="xskills-test-assign__test-input"
              >
                <label
                  className="xskills-test-assign__radio-label"
                  htmlFor="xskillsTestRadio_1"
                >
                  <input
                    checked={false}
                    className="xskills-test-assign__radio"
                    id="xskillsTestRadio_1"
                    key="xskillsTestRadio_1"
                    name="xskillsTestRadio_1"
                    onChange={[Function]}
                    type="radio"
                    value="1"
                  />
                   
                  T
                </label>
              </div>
            </React.Fragment>
            <React.Fragment
              key="xskillsTestRadio_2"
            >
              <div
                className="xskills-test-assign__test-input"
              >
                <label
                  className="xskills-test-assign__radio-label"
                  htmlFor="xskillsTestRadio_2"
                >
                  <input
                    checked={false}
                    className="xskills-test-assign__radio"
                    id="xskillsTestRadio_2"
                    key="xskillsTestRadio_2"
                    name="xskillsTestRadio_2"
                    onChange={[Function]}
                    type="radio"
                    value="2"
                  />
                   
                  T
                </label>
              </div>
            </React.Fragment>
            <React.Fragment
              key="xskillsTestRadio_3"
            >
              <div
                className="xskills-test-assign__test-input"
              >
                <label
                  className="xskills-test-assign__radio-label"
                  htmlFor="xskillsTestRadio_3"
                >
                  <input
                    checked={false}
                    className="xskills-test-assign__radio"
                    id="xskillsTestRadio_3"
                    key="xskillsTestRadio_3"
                    name="xskillsTestRadio_3"
                    onChange={[Function]}
                    type="radio"
                    value="3"
                  />
                   
                  T
                </label>
              </div>
            </React.Fragment>
            <React.Fragment
              key="xskillsTestRadio_4"
            >
              <div
                className="xskills-test-assign__test-input"
              >
                <label
                  className="xskills-test-assign__radio-label"
                  htmlFor="xskillsTestRadio_4"
                >
                  <input
                    checked={false}
                    className="xskills-test-assign__radio"
                    id="xskillsTestRadio_4"
                    key="xskillsTestRadio_4"
                    name="xskillsTestRadio_4"
                    onChange={[Function]}
                    type="radio"
                    value="4"
                  />
                   
                  T
                </label>
              </div>
            </React.Fragment>
          </div>
          <div
            className="xskills-test-assign__test-input-right"
          >
            <React.Fragment
              key="xskillsTestRadio_5"
            >
              <div
                className="xskills-test-assign__test-input"
              >
                <label
                  className="xskills-test-assign__radio-label"
                  htmlFor="xskillsTestRadio_5"
                >
                  <input
                    checked={false}
                    className="xskills-test-assign__radio"
                    id="xskillsTestRadio_5"
                    key="xskillsTestRadio_5"
                    name="xskillsTestRadio_5"
                    onChange={[Function]}
                    type="radio"
                    value="5"
                  />
                   
                  T
                </label>
              </div>
            </React.Fragment>
            <React.Fragment
              key="xskillsTestRadio_6"
            >
              <div
                className="xskills-test-assign__test-input"
              >
                <label
                  className="xskills-test-assign__radio-label"
                  htmlFor="xskillsTestRadio_6"
                >
                  <input
                    checked={false}
                    className="xskills-test-assign__radio"
                    id="xskillsTestRadio_6"
                    key="xskillsTestRadio_6"
                    name="xskillsTestRadio_6"
                    onChange={[Function]}
                    type="radio"
                    value="6"
                  />
                   
                  T
                </label>
              </div>
            </React.Fragment>
            <React.Fragment
              key="xskillsTestRadio_7"
            >
              <div
                className="xskills-test-assign__test-input"
              >
                <label
                  className="xskills-test-assign__radio-label"
                  htmlFor="xskillsTestRadio_7"
                >
                  <input
                    checked={false}
                    className="xskills-test-assign__radio"
                    id="xskillsTestRadio_7"
                    key="xskillsTestRadio_7"
                    name="xskillsTestRadio_7"
                    onChange={[Function]}
                    type="radio"
                    value="7"
                  />
                   
                  T
                </label>
              </div>
            </React.Fragment>
            <React.Fragment
              key="xskillsTestRadio_8"
            >
              <div
                className="xskills-test-assign__test-input"
              >
                <label
                  className="xskills-test-assign__radio-label"
                  htmlFor="xskillsTestRadio_8"
                >
                  <input
                    checked={false}
                    className="xskills-test-assign__radio"
                    id="xskillsTestRadio_8"
                    key="xskillsTestRadio_8"
                    name="xskillsTestRadio_8"
                    onChange={[Function]}
                    type="radio"
                    value="8"
                  />
                   
                  T
                </label>
              </div>
            </React.Fragment>
          </div>
        </div>
      </div>
      <div
        className="xskills-test-assign__program-setting-buttons-container"
      >
        <ProgramSettingsButtons
          saveAndReturnHandler={[Function]}
          setInitialValuesHandler={[Function]}
          showRestoreDefaults={false}
          stateResult={true}
          suppressSaveAndReturnRedirect={true}
        />
      </div>
    </form>
  </div>
</React.Fragment>
`;

exports[`<XSkillsTestAssignment /> should render as expected 1`] = `
<React.Fragment>
  <div
    className="xskills-test-assign"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="xskills-test-assign__tab-content "
      >
        <div
          className="xskills-test-assign__select-block"
        >
          <span
            className="xskills-test-assign__select-block-caption"
          >
            Select Expert 21 Workshop Test
          </span>
          <div
            className="xskills-test-assign__test-input-left"
          >
            <React.Fragment
              key="xskillsTestRadio_1"
            >
              <div
                className="xskills-test-assign__test-input"
              >
                <label
                  className="xskills-test-assign__radio-label"
                  htmlFor="xskillsTestRadio_1"
                >
                  <input
                    checked={false}
                    className="xskills-test-assign__radio"
                    id="xskillsTestRadio_1"
                    key="xskillsTestRadio_1"
                    name="xskillsTestRadio_1"
                    onChange={[Function]}
                    type="radio"
                    value="1"
                  />
                   
                  T
                </label>
              </div>
            </React.Fragment>
            <React.Fragment
              key="xskillsTestRadio_2"
            >
              <div
                className="xskills-test-assign__test-input"
              >
                <label
                  className="xskills-test-assign__radio-label"
                  htmlFor="xskillsTestRadio_2"
                >
                  <input
                    checked={false}
                    className="xskills-test-assign__radio"
                    id="xskillsTestRadio_2"
                    key="xskillsTestRadio_2"
                    name="xskillsTestRadio_2"
                    onChange={[Function]}
                    type="radio"
                    value="2"
                  />
                   
                  T
                </label>
              </div>
            </React.Fragment>
            <React.Fragment
              key="xskillsTestRadio_3"
            >
              <div
                className="xskills-test-assign__test-input"
              >
                <label
                  className="xskills-test-assign__radio-label"
                  htmlFor="xskillsTestRadio_3"
                >
                  <input
                    checked={false}
                    className="xskills-test-assign__radio"
                    id="xskillsTestRadio_3"
                    key="xskillsTestRadio_3"
                    name="xskillsTestRadio_3"
                    onChange={[Function]}
                    type="radio"
                    value="3"
                  />
                   
                  T
                </label>
              </div>
            </React.Fragment>
            <React.Fragment
              key="xskillsTestRadio_4"
            >
              <div
                className="xskills-test-assign__test-input"
              >
                <label
                  className="xskills-test-assign__radio-label"
                  htmlFor="xskillsTestRadio_4"
                >
                  <input
                    checked={false}
                    className="xskills-test-assign__radio"
                    id="xskillsTestRadio_4"
                    key="xskillsTestRadio_4"
                    name="xskillsTestRadio_4"
                    onChange={[Function]}
                    type="radio"
                    value="4"
                  />
                   
                  T
                </label>
              </div>
            </React.Fragment>
          </div>
          <div
            className="xskills-test-assign__test-input-right"
          >
            <React.Fragment
              key="xskillsTestRadio_5"
            >
              <div
                className="xskills-test-assign__test-input"
              >
                <label
                  className="xskills-test-assign__radio-label"
                  htmlFor="xskillsTestRadio_5"
                >
                  <input
                    checked={false}
                    className="xskills-test-assign__radio"
                    id="xskillsTestRadio_5"
                    key="xskillsTestRadio_5"
                    name="xskillsTestRadio_5"
                    onChange={[Function]}
                    type="radio"
                    value="5"
                  />
                   
                  T
                </label>
              </div>
            </React.Fragment>
            <React.Fragment
              key="xskillsTestRadio_6"
            >
              <div
                className="xskills-test-assign__test-input"
              >
                <label
                  className="xskills-test-assign__radio-label"
                  htmlFor="xskillsTestRadio_6"
                >
                  <input
                    checked={false}
                    className="xskills-test-assign__radio"
                    id="xskillsTestRadio_6"
                    key="xskillsTestRadio_6"
                    name="xskillsTestRadio_6"
                    onChange={[Function]}
                    type="radio"
                    value="6"
                  />
                   
                  T
                </label>
              </div>
            </React.Fragment>
            <React.Fragment
              key="xskillsTestRadio_7"
            >
              <div
                className="xskills-test-assign__test-input"
              >
                <label
                  className="xskills-test-assign__radio-label"
                  htmlFor="xskillsTestRadio_7"
                >
                  <input
                    checked={false}
                    className="xskills-test-assign__radio"
                    id="xskillsTestRadio_7"
                    key="xskillsTestRadio_7"
                    name="xskillsTestRadio_7"
                    onChange={[Function]}
                    type="radio"
                    value="7"
                  />
                   
                  T
                </label>
              </div>
            </React.Fragment>
            <React.Fragment
              key="xskillsTestRadio_8"
            >
              <div
                className="xskills-test-assign__test-input"
              >
                <label
                  className="xskills-test-assign__radio-label"
                  htmlFor="xskillsTestRadio_8"
                >
                  <input
                    checked={false}
                    className="xskills-test-assign__radio"
                    id="xskillsTestRadio_8"
                    key="xskillsTestRadio_8"
                    name="xskillsTestRadio_8"
                    onChange={[Function]}
                    type="radio"
                    value="8"
                  />
                   
                  T
                </label>
              </div>
            </React.Fragment>
          </div>
        </div>
      </div>
      <div
        className="xskills-test-assign__program-setting-buttons-container"
      >
        <ProgramSettingsButtons
          saveAndReturnHandler={[Function]}
          setInitialValuesHandler={[Function]}
          showRestoreDefaults={false}
          stateResult={true}
          suppressSaveAndReturnRedirect={true}
        />
      </div>
    </form>
  </div>
</React.Fragment>
`;

exports[`<XSkillsTestAssignment /> should render as expected when testsMeta is empty 1`] = `
<React.Fragment>
  <div
    className="xskills-test-assign"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="xskills-test-assign__tab-content "
      />
      <div
        className="xskills-test-assign__program-setting-buttons-container"
      >
        <ProgramSettingsButtons
          saveAndReturnHandler={[Function]}
          setInitialValuesHandler={[Function]}
          showRestoreDefaults={false}
          stateResult={true}
          suppressSaveAndReturnRedirect={true}
        />
      </div>
    </form>
  </div>
</React.Fragment>
`;
